cookbooks/dev-template/files/default/etc/iptables.rules
*nat

:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

## Port forwarding example. This sends packets being sent to 184.106.83.243/32 on port 80 to 
## port 8080 speficially for the eth0 interface
#-A PREROUTING -d 184.106.83.243/32 -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to 184.106.83.243:8080

COMMIT

*filter

:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:TCP - [0:0]
:UDP - [0:0]

## INPUT

-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m state --state NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j TCP
-A INPUT -p icmp --icmp-type 8 -m state --state NEW -j ACCEPT
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable


## FORWARD

-A FORWARD -o lo -j ACCEPT
-A FORWARD -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT


## OUTPUT

-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT


## TCP
-A TCP -p tcp -m tcp --dport 22 -j ACCEPT

## UDP
-A UDP -p udp -m udp --dport 53 -j ACCEPT


COMMIT
